--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Gudon.ch ✊
+description: pushing open society
 # logo: "/assets/images/just-the-docs.png"
-show_downloads: true
+show_downloads: false
 # google_analytics: [Your Google Analytics tracking ID]
